--- a/src/main/metadata/classes/VehicleRelationshipHelperJP.cls
+++ b/src/main/metadata/classes/VehicleRelationshipHelperJP.cls
@@ -1,6 +1,6 @@
 public with sharing class VehicleRelationshipHelperJP 
 {  
-    Public static String[] ignoredAccounts = new String[]{'ＭＡＹＢＡＣＨ販売店車両%','ＭＢＰＣ販売店車両%','ＳＭＡＲＴ販売店車両%','ＳＬＲ販売店車両%'};
+    Public String[] ignoredAccounts = new String[]{'ＭＡＹＢＡＣＨ販売店車両%','ＭＢＰＣ販売店車両%','ＳＭＡＲＴ販売店車両%','ＳＬＲ販売店車両%'};
     Public Static String[] ignoredAccount = new String[]{'ＭＡＹＢＡＣＨ販売店車両%','ＭＢＰＣ販売店車両%','ＳＭＡＲＴ販売店車両%','ＳＬＲ販売店車両%'};
     Public Static Set<Id> setIgnoredAccounts=new Set<Id>();     
         
@@ -9,12 +9,12 @@ public with sharing class VehicleRelationshipHelperJP
                 setIgnoredAccounts.add(acc.Id);
             } 
      }
-    Public static void validateOverlappingVehicleRelationshiponInsert(List<Vehicle_Relationship__c> vehicleRel){       
+    Public void validateOverlappingVehicleRelationshiponInsert(List<Vehicle_Relationship__c> vehicleRel){       
        Set<Id> accountIds = new Set<Id>();
        List<Vehicle_Relationship__c> vehicle_relationship = new List<Vehicle_Relationship__c>(); 
        Set<date> setStartDate=new Set<date>();
        Set<date> setEndDate=new Set<date>();       
-       Set<Id> ignoredAcct=new Set<Id>();
+       Set<Id> ignoredAcct=new Set<Id>();         
           for(Account acc:[select id from Account Where Name Like :ignoredAccounts ]){
                 ignoredAcct.add(acc.Id);
             }
@@ -47,12 +47,13 @@ public with sharing class VehicleRelationshipHelperJP
             }
           }     
      }
-    Public static void validateOverlappingVehicleRelationshiponUpdate(List<Vehicle_Relationship__c> newVehicleRel,Map<Id,Vehicle_Relationship__c> oldVehicleRel){ 
+    Public void validateOverlappingVehicleRelationshiponUpdate(List<Vehicle_Relationship__c> newVehicleRel,Map<Id,Vehicle_Relationship__c> oldVehicleRel){ 
          Set<Id> accountIds = new Set<Id>();
          List<Vehicle_Relationship__c> vehicle_relationship = new List<Vehicle_Relationship__c>(); 
          Set<date> setStartDate=new Set<date>();
          Set<date> setEndDate=new Set<date>();
          Set<Id> ignoredAcct=new Set<Id>();
+         
           for(Account acc:[select id from Account Where Name Like :ignoredAccounts ]){
                 ignoredAcct.add(acc.Id);
             }
@@ -113,7 +114,7 @@ public with sharing class VehicleRelationshipHelperJP
           }
         }  
          updateVehicleAmount(ContactIds);        
-       //  createAccountLink(VehicleIds,VehicleRelationshipIds,contactIdofVehicleRelationship);
+         createAccountLink(VehicleIds,VehicleRelationshipIds,contactIdofVehicleRelationship);
          updateAccountstatus(ContactIdsforValidity);
     } 
     
@@ -149,7 +150,7 @@ public with sharing class VehicleRelationshipHelperJP
             }  
         }                          
         updateVehicleAmount(ContactIds);
-       // createAccountLink(VehicleIds,VehicleRelationshipIds,contactIdofVehicleRelationship);    
+        createAccountLink(VehicleIds,VehicleRelationshipIds,contactIdofVehicleRelationship);    
         updateAccountstatus(ContactIdsforValidity);   
     } 
     Public static void OnAfterDelete(List<Vehicle_Relationship__c> oldVehicleRelRecords){ 
@@ -218,13 +219,12 @@ public with sharing class VehicleRelationshipHelperJP
             update vehicleAmountToUpdate;         
     }     
     //Create Account Link   
-    /*
     Public static void createAccountLink(Set<Id> VehicleIds,Set<Id> VehicleRelationshipIds,Set<Id> contactIdofVehicleRelationship){ 
         Set<Id> ContactIds=new Set<Id>();        
         Map<Id,Vehicle_Relationship__c> mapOfContact=new Map<Id,Vehicle_Relationship__c>();
         IgnoredAccounts();      
-        List<Vehicle_Relationship__c> lstVehicleRelationship=[select Id,Contact__c,Owner_Relation__c,Vehicle_ID__c,Start_Date__c,End_Date__c,Car_Relation__c from Vehicle_Relationship__c Where Vehicle_ID__c IN :VehicleIds AND Car_Relation__c='Purchaser' /*AND Contact__c IN : contactIdofVehicleRelationship*//* AND (NOT Contact__c IN : setIgnoredAccounts) LIMIT 50000];*/
-    /*    for(Vehicle_Relationship__c  vr:lstVehicleRelationship){
+        List<Vehicle_Relationship__c> lstVehicleRelationship=[select Id,Contact__c,Owner_Relation__c,Vehicle_ID__c,Start_Date__c,End_Date__c,Car_Relation__c from Vehicle_Relationship__c Where Vehicle_ID__c IN :VehicleIds AND Car_Relation__c='Purchaser' /*AND Contact__c IN : contactIdofVehicleRelationship*/ AND (NOT Contact__c IN : setIgnoredAccounts) LIMIT 50000];
+        for(Vehicle_Relationship__c  vr:lstVehicleRelationship){
             if((vr.Vehicle_ID__c!=Null && vr.Start_Date__c==Null || vr.Start_Date__c<=system.today()) && (vr.End_Date__c==Null || vr.End_Date__c>=system.today())){
                 mapOfContact.put(vr.Vehicle_ID__c,vr);
             }
@@ -271,5 +271,46 @@ public with sharing class VehicleRelationshipHelperJP
           if(!lstAccLink.isEmpty())
             insert lstAccLink;
     }
-    */
+    
+    public static void updatePortalApplyStatus(List<Vehicle_RelationShip__C> vehRelList, Map<Id,Vehicle_Relationship__c> oldMap){
+        try{
+            List<Vehicle_Relationship__c> filterVehRelList = new List<Vehicle_Relationship__c>();
+            List<Id> accountId = new List<Id>();
+            List<Vehicle_relationship__c> updateVehRelList = new List<Vehicle_Relationship__c>();
+            if(oldMap.isEmpty()){
+                for(Vehicle_Relationship__c curVehRel : vehRelList){
+                    if(curVehRel.Start_Date__c != NULL && curVehRel.End_Date__c == NULL && curVehRel.Car_Relation__c != NULL && curVehRel.Contact__c != NULL){
+                        accountId.add(curVehRel.contact__c);
+                        filterVehRelList.add(curVehRel);
+                    }
+                }
+            }
+            else{
+                for(Vehicle_Relationship__c curVehRel : vehRelList){
+                   Vehicle_Relationship__c oldRec  = oldMap.get(curVehRel.Id);
+                    if(oldRec.Start_Date__c != NULL && oldRec.End_Date__c == NULL){
+                        if(curVehRel.Car_Relation__c != oldRec.Car_Relation__c || curVehRel.Contact__c != oldRec.Contact__c || curVehRel.Registration_Number__c != oldRec.Registration_Number__c){
+                            accountId.add(curVehRel.contact__c);
+                            filterVehRelList.add(curVehRel); 
+                        }
+                    }
+                }
+            }
+            List<Account_Link__C> accLinkList = [SELECT Id,System__c,toRole__C FROM Account_Link__c WHERE toRole__C IN: accountId AND System__C = 'My Mercedes'];
+            for(Vehicle_Relationship__c vr : filterVehRelList){
+                for(Account_Link__c al : accLInkList){
+                    if(vr.Contact__c == al.toRole__C){
+                        vr.Portal_Apply_Status__c = 'To be Sent';
+                        updateVehRelList.add(vr);
+                        System.debug('Updating Record Id ===> '+vr.Id);
+                    }
+                }
+            }   
+        }
+        catch(Exception e){
+            system.debug('Error'+e.getMessage());
+            system.debug('Error'+e.getCause());
+            system.debug('Error'+e.getLineNumber());             
+        }
+    }
 }
