--- a/src/main/metadata-au/classes/ContactHelper.cls
+++ b/src/main/metadata-au/classes/ContactHelper.cls
@@ -76,41 +76,41 @@ public class ContactHelper {
     }
     
          public static void validateduplicategatekeeper(List<Contact> New_Contact_List)
-	{
-		
-				
-			Set<Id> AccIdSet = new Set<Id>(); 
-			for (Contact con: New_Contact_List){
-				AccIdSet.add ( con.accountId);
-				   
-				}
-			Map<id,Account> AccountMap= new  Map<id,Account>([SELECT id,(SELECT id, Dealer_Lead_Gate_Keeper__c,Sub_BusinessUnit__c,Business_Unit__c FROM Contacts WHERE Dealer_Lead_Gate_Keeper__c=true) FROM Account WHERE id IN : AccIdSet ]);
-		   
-		   for (Contact con: New_Contact_List)
-		   {
-				   if (con.Dealer_Lead_Gate_Keeper__c == true){
-						Id AccId = con.accountId;
-				   Account acct= AccountMap.get(AccId);
-				   for (Contact con1: acct.contacts){
-					   if ( con1.id != con.id){
-						   Set<String> Con_business_unit_set= new set<String>(con.Business_Unit__c.split(';'));
-						   Set<String> Con1_business_unit_set= new set<String>(con1.Business_Unit__c.split(';'));
-						   for(String businessunit: Con_business_unit_set){
-							   if(Con1_business_unit_set.Contains(businessunit)){
-								   con.adderror('Business unit options of this contact is simillar to existed contacts. choose the different values');								   
-								   
-							   }
-						   }
-						 
-						}
-					}
-			   }
-				  
-		   }
-				
-				
-				
-	}
+    {
+        
+                
+            Set<Id> AccIdSet = new Set<Id>(); 
+            for (Contact con: New_Contact_List){
+                AccIdSet.add ( con.accountId);
+                   
+                }
+            Map<id,Account> AccountMap= new  Map<id,Account>([SELECT id,(SELECT id, Dealer_Lead_Gate_Keeper__c,Sub_BusinessUnit__c,Business_Unit__c FROM Contacts WHERE Dealer_Lead_Gate_Keeper__c=true) FROM Account WHERE id IN : AccIdSet ]);
+           
+           for (Contact con: New_Contact_List)
+           {
+                   if (con.Dealer_Lead_Gate_Keeper__c == true){
+                        Id AccId = con.accountId;
+                   Account acct= AccountMap.get(AccId);
+                   for (Contact con1: acct.contacts){
+                       if ( con1.id != con.id){
+                           Set<String> Con_business_unit_set= new set<String>(con.Business_Unit__c.split(';'));
+                           Set<String> Con1_business_unit_set= new set<String>(con1.Business_Unit__c.split(';'));
+                           for(String businessunit: Con_business_unit_set){
+                               if(Con1_business_unit_set.Contains(businessunit)){
+                                   con.adderror('Only one user per business unit can be assigned as "Dealer Lead Administrator"');                                 
+                                   
+                               }
+                           }
+                         
+                        }
+                    }
+               }
+                  
+           }
+                
+                
+                
+    }
     public static void ValidateManager(List<Contact> contacts) {
         
         List<Contact> newContactsForManager = new List<Contact>();
