--- a/src/main/metadata/classes/UtilWebservice.cls
+++ b/src/main/metadata/classes/UtilWebservice.cls
@@ -3,12 +3,20 @@ Global class UtilWebservice
 
     webservice static  void AccountIfnoSendSPO(String CustomerID)
     { 
+	String DealerId;
     User  Usr = [SELECT Market__c, Id FROM User WHERE Id = : UserInfo.getUserId()]; 
     Id acclnk_RecordTypeId = Schema.SObjectType.Account_Link__c.getRecordTypeInfosByName().get('ContactSector').getRecordTypeId();
     system.debug('$%$%$%$%$%$%$%$ acclnk_RecordTypeId '+acclnk_RecordTypeId );
-    Account_Link__c Acclnk=[Select fromRole__c,toRole__c,RecordtypeID from Account_Link__c where toRole__c=:CustomerID and RecordtypeId=:acclnk_RecordTypeId limit 1]; 
-     
-    String DealerId=acclnk.fromRole__c;
+    List<Account_Link__c> Acclnk=new  List<Account_Link__c>();
+    Acclnk=[Select fromRole__c,toRole__c,RecordtypeID from Account_Link__c where toRole__c=:CustomerID and RecordtypeId=:acclnk_RecordTypeId limit 1];
+ 
+     if(Acclnk!=null)
+     {
+     for(Account_Link__c acc:Acclnk)
+     {
+    DealerId=acc.fromRole__c;
+    }
+    }
     
     crmasiaDaimlerApacComSfdcnotificatio.SFDCNotificationPort sendport=new crmasiaDaimlerApacComSfdcnotificatio.SFDCNotificationPort();
     crmasiaDaimlerApacComSfdcnotificatio.SPOCustomerNotificationRequestMessageType request=new crmasiaDaimlerApacComSfdcnotificatio.SPOCustomerNotificationRequestMessageType();
