--- a/src/main/metadata/classes/AddressSearchValidationController.cls
+++ b/src/main/metadata/classes/AddressSearchValidationController.cls
@@ -703,9 +703,10 @@ If the user is Saving  same address which matches the fields returned by toleran
                     objAccountDeDup.vin__c=response.CustomerIdentificationResponseMessage[0].Customer.vin;
                     }
                     if(response.CustomerIdentificationResponseMessage[0].Customer.Address_xc!=null)
-                    {
-                    AddressDetails='Address Code' +' '+response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Address_Code_xc +' ;' + 'Post Code '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].ZipCode_xc + 'Prefecture '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Province_xc+ 'City '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].City_xc+ 'Town '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].District_xc+ 'Block '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Block_xc + 'Address Line 1 '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Address_Line_1_xc+ 'Address Line 2 '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Address_Line_2_xc + 'Unnormalized Post Code'+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Temp_ZipCode_xc + 'Unnormalized Address'+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Temp_Address_xc;
-                    }
+                    {                   
+                        AddressDetails ='Address Code' +' '+response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Address_Code_xc +' ;' + 'Post Code '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].ZipCode_xc + ' ' +'Prefecture '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Province_xc+ ' ' +'City '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].City_xc+ ' ' +'Town '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].District_xc+ ' ' + 'Block '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Block_xc + ' ' +'Address Line 1 '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Address_Line_1_xc+' ' + 'Address Line 2 '+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Address_Line_2_xc;// + 'Unnormalized Post Code'+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Temp_ZipCode_xc + 'Unnormalized Address'+ response.CustomerIdentificationResponseMessage[0].Customer.Address_xc[0].Temp_Address_xc;
+                        AddressDetails = AddressDetails.replace('null',' ');
+                   }
                 }
                 show = true;
                 if(response.CustomerIdentificationResponseMessage ==null)
